--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.17.3",
     "lodash": "^4.17.21",
     "mysql2": "^3.3.3",
+    "onesignal-node": "^3.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.31.1",
