--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.2",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
+    "date-fns": "^2.30.0",
     "express-session": "^1.17.3",
     "lodash": "^4.17.21",
     "mysql2": "^3.3.3",
